--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   },
   "dependencies": {
     "gatsby": "^3.13.1",
+    "gatsby-plugin-sass": "^4.14.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "scss-reset": "^1.2.2"
   },
   "devDependencies": {
     "prettier": "2.4.1"
