--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "sass": "^1.42.1",
     "scss-reset": "^1.2.2"
   },
