--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^3.13.1",
     "gatsby-plugin-sass": "^4.14.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
