--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "gatsby": "^3.13.1",
+    "gatsby-plugin-robots-txt": "^1.6.10",
     "gatsby-plugin-sass": "^4.14.0",
+    "gatsby-plugin-sitemap": "^4.10.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
