--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^3.13.1",
+    "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-robots-txt": "^1.6.10",
     "gatsby-plugin-sass": "^4.14.0",
     "gatsby-plugin-sitemap": "^4.10.0",
